# MiddlewareTutorials

./: .gitignore
Flask/: hello_world.py
MSCOM/: .gitignore  CMakeLists.txt
MSCOM/include/: dotnet.h  dotnet.idl  dotnet_i.c
MSCOM/src/: basic_com_support.c  c11_atomic_test.c  pthread_support.c
MSCOM/toolchains/: mingw-x86_i686.cmake
dotnet_remoting/: dotnet_remoting.sln
dotnet_remoting/RemotingClient/: JobNotesSponsor.cs  Program.cs  RemotingClient.csproj
dotnet_remoting/RemotingContract/: ClientJobHandler.cs  EventWrapper.cs  IJobNotes.cs  IJobServer.cs  JobEventArgs.cs  JobEventWrapper.cs  JobInfo.cs  RemotingContract.csproj  ServerJobHandler.cs
dotnet_remoting/RemotingJobHostServer/: CompositionRoot.cs  Program.cs  RemotingHostedService.cs  RemotingJobHostServer.csproj
dotnet_remoting/RemotingJobServer/: App.config  JobNotesFactory.cs  JobNotesInternal.cs  JobServerInternal.cs  LoggingFactory.cs  Program.cs  RemotingConfiguration.cs  RemotingHost.cs  RemotingJob.cs  RemotingJobServer.csproj  SchedulerHostedService.cs  ServiceConfiguration.cs  appsettings.json
dotnet_remoting/RemotingStandin/: JobNotesInternal.cs  JobServerInternal.cs  RemotingStandin.csproj
jsonrpc/: jsonrpc_socketclient.py  jsonrpc_socketmessage.py  jsonrpc_socketserver.py  socket_utils.py
zeromq/: .editorconfig  .gitignore  CMakeLists.txt
zeromq/src/hello_world/: hello_client.c  hello_server.c
zeromq/src/weather_publish/: weather_client.c  weather_server.c
